--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 		<ul>
 			<li class="btn">
 				<a href="#">
-					Acceil
+					<h1>Acceil</h1>
 				</a>
 			</li>
 			<li class="btn">
 				<a href="doc/news.html">
-					Gmail
+					<h1>Gmail</h1>
 				</a>
 			</li>
 			<li class="btn">
 				<a href="doc/contact.html">
-					Contact
+					<h1>Contact</h1>
 				</a>
 			</li>
 		</ul>
